--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: otherselvesworking.group
-email: your-email@example.com
+title: The Other Selves Working Group
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  otherselvesworking.group
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://otherselvesworking.group" # the base hostname & protocol for your site
+  The Other Selves Working Group is a non-hierarchical union of spiritual seekers 
+  who have come together as equals for the purpose of living our lives as a study 
+  of the Law of One. We strive to maintain a focus on living according to the 
+  philosophy promulgated by the Confederation of Planets in Service to the Infinite 
+  Creator. This involves helping each other balance in our lives and offering service 
+  in our daily lives in such ways as befit our abilities. As dedicated seekers who 
+  engage in personal spiritual work as a condition of participation in the working 
+  group, we also attempt to lighten the planetary vibration through all loving means 
+  available to us.
+baseurl: "/_site" # the subpath of your site, e.g. /blog
+url: "https://oswg.github.io" # the base hostname & protocol for your site
 twitter_username:
 github_username:
 
@@ -33,7 +41,7 @@ plugins:
   - jekyll-feed
 
 # Exclude from processing.
-# The following items will not be processed, by default.
+# The following items will not be git, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
 # the internal "default list".
 #
